# beavor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  beavor.py  launch  launcher - stable.bat  requirements.txt  utils.py  widgets.py  worklist.py
backend/: Cargo.toml  Makefile
backend/resources/: schema.sql
backend/resources/migration/: migrate_v1.1.sql  migrate_v1.2.sql
backend/resources/upgrade/: upgrade_v1.1.sql
backend/src/: database.rs  due_date.rs  holiday.rs  lib.rs  milestone.rs  project.rs  schedule.rs  task.rs  time_logger.rs  utils.rs
beavor/: Calendar.py  CompletingComboBox.py  DateEntry.py  EditingPane.py  MainWindow.py  ScrollFrame.py  SensibleReturnWidget.py  TaskScroller.py  Timer.py  app.py  backend.pyi  main_window.py  sidebar.py  utils.py  widgets.py
beavor/backend/src/: lib.rs
beavor/rust_backend/: .env  Cargo.toml
beavor/rust_backend/resources/: schema.sql
beavor/rust_backend/src/: calendar.rs  database.rs  date.rs  due_date.rs  lib.rs  model.rs  schedule.rs  task.rs  utils.rs
beavor/utils/: ContextMenuSpawner.py  TrackOutsideClick.py  async_obj.py
beavor/widgets/: Calendar.py  CompletingComboBox.py  DateEntry.py  EditingPane.py  ScrollFrame.py  SensibleReturnWidget.py  TaskScroller.py  Timer.py
frontend/: Cargo.toml
frontend/src/: calendar.rs  main.rs  task_scroller.rs
frontend/src/widgets/: calendar.rs  command_line.rs  confirm_modal.rs  error_bar.rs  hyperlink.rs  mod.rs  task_editor.rs  task_scroller.rs
src/: main.rs
src/backend/: .env  .gitignore  Cargo.toml  build.rs
src/backend/src/: database.rs  due_date.rs  lib.rs  schedule.rs  task.rs  utils.rs
