[package]
name = "backend"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = "1.26"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
chrono = {version="0.4.23", features=["std"]}
reqwest = "0.11.20"
serde_json = "1.0.105"
serde = {version="1.0.186", features=["derive"]}

[build-dependencies]
tokio = "1.26"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
