[package]
name = "frontend"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }

iced = { version = "0.10.0", features = ["tokio", "image"] }
iced_aw = { version = "0.7.0" , features = ["icons", "modal", "card"]}
chrono = { version = "0.4.31", features = ["clock"] }
tokio = { version = "1.33.0", features = ["sync"]}
open = "5.0.0"
serde_json = "1.0.108"
