[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.1", features = ["extension-module","chrono"]}
pyo3-asyncio = {version = "0.18.0", features=["attributes", "tokio-runtime"]}
tokio = "1.26"
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
chrono = "0.4.23"
reqwest = "0.11.20"
serde_json = "1.0.105"
serde = {version="1.0.186", features=["derive"]}
