[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.1", features = ["extension-module"]}
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
