[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.18.1", features = ["extension-module","chrono"]}
pyo3-asyncio = {version = "0.18.0", features=["attributes", "tokio-runtime", "async-std-runtime"]}
sqlx = {version = "0.6.2", features = ["runtime-async-std-native-tls", "sqlite"]}
chrono = {version="0.4.23", features=["std"]}
reqwest = "0.11.20"
serde_json = "1.0.105"
serde = {version="1.0.186", features=["derive"]}
